Additional DAO unit tests.
- Switch to Joda Time
- Added schema and test data scripts

--- a/pom.xml
+++ b/pom.xml
@@ -109,13 +109,17 @@
 			<version>2.2.8</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 
+
+		<!-- Date Time -->
 		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>2.2.2</version>
-			<scope>test</scope>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.5</version>
 		</dependency>
-		 -->
+		<dependency>
+			<groupId>org.jadira.usertype</groupId>
+			<artifactId>usertype.core</artifactId>
+			<version>3.2.0.GA</version>
+		</dependency>
 	</dependencies>
 </project>
