Simple feed fetcher
- Added adapter from SyndEntry to Post
- Feed task to check RSS feeds and persist to DB.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,20 @@
 	</build>
 
 	<dependencies>
+		<!-- Rome -->
+		<dependency>
+			<groupId>rome</groupId>
+			<artifactId>rome-fetcher</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<!-- Commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
