Create default configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- YAML -->
+		<dependency>
+			<groupId>com.esotericsoftware.yamlbeans</groupId>
+			<artifactId>yamlbeans</artifactId>
+			<version>1.08</version>
+		</dependency>
 
 		<!-- Commons -->
 		<dependency>
